fixed scrollbar

--- a/fashify/src/pages/ProductList/components/ProductCard/ProductCard.css
+++ b/fashify/src/pages/ProductList/components/ProductCard/ProductCard.css
@@ -44,6 +44,18 @@
   font-size: 0.8rem;
   font-weight: 700;
 }
+.productlist-card-size-container {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  align-self: end;
+  justify-self: end;
+  padding: 0.25rem 0.75rem;
+  border-radius: 0.25rem;
+  background-color: var(--yellow-600);
+  color: var(--white-color);
+  font-size: 0.75rem;
+  font-weight: 700;
+}
 .productlist-card-new-item {
   background-color: var(--yellow-600);
   border-radius: 0.25rem;
@@ -56,10 +68,18 @@
   padding: 0.25rem;
   font-size: 0.85rem;
 }
-.product-card-price {
+.product-card-price-container {
   font-size: 1rem;
   padding: 0 0.25rem;
   font-weight: 600;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.product-card-original-price {
+  text-decoration: line-through;
+  font-weight: 500;
+  color: var(--grey-400);
 }
 .card-sub-text {
   display: flex;
